--- a/实验报告.md
+++ b/实验报告.md
@@ -23,19 +23,16 @@
 <center>吴泳锟   181180141
 
 <div STYLE="page-break-after: always;"></div>
-
 </br>
 
 </br>
 
 <p align="right"><font face = "Arial"><font size = 5>CHAPTER</font> <font size = 8>1</p>
-
 </br>
 
 <hr>
 
 <p align="right"><font size = 5>项目概述</p>
-
 <hr>
 
 </br>
@@ -74,19 +71,16 @@
   - 完成服务端yolo目标识别算法的部署
 
 <div STYLE="page-break-after: always;"></div>
-
 </br>
 
 </br>
 
 <p align="right"><font face = "Arial"><font size = 5>CHAPTER</font> <font size = 8>2</p>
-
 </br>
 
 <hr>
 
 <p align="right"><font size = 5>项目实现</p>
-
 <hr>
 
 </br>
@@ -119,15 +113,119 @@
 
 ​       实际使用时，可以使用darknet网络框架部署yolo算法，实现过程请参考2.2小节。
 
-#### <center>2.1.3  多进程加速
+#### <center>2.1.3  多线/进程加速
+</br></br>
+      由于项目组没有GPU对yolo算法进行加速，因此这里采用多进程的方式对识别算法加速，以充分利用CPU资源。
+      首先对server任务进行划分，可分为视频传输、内容识别两类，资料显示，对于CPU密集型的计算，由于python的一个全局锁（GIL）的存在，采用多线程不能发挥多核的优势，而应该采用多进程的方式进行优化；对于IO密集型的计算，多线程可以利用IO阻塞等待时的空闲时间执行其他线程，提升执行效率。
+      因此在实现时，我们对内容识别进行了多进程优化，利用多核优势同时识别多张图片。而在视频的接收和发送中使用了多线程，以减少阻塞等待的消耗。
 
-</br>
 
-</br>
 
 ### <center>2.2  具体实现
 
 ### </br>
+
+### 2.2.1 实现视频传输
+
+##### client端
+
+client在视频传输中的任务是：
+
+1. 将视频逐帧发送
+2. 接收server端处理后发回的视频帧
+
+为了保证实时的发送和接收，任务1、2应该采用双线程处理：
+
+```python
+send = threading.Thread(target=client.sendVideo,args=('../test.mp4',))
+recv = threading.Thread(target=client.recvVideo)
+send.start()
+recv.start()
+```
+
+在发送时规定的发送流程如下：
+
+```python
+	cap = cv.VideoCapture(filepath)
+    
+    if cap.isOpened(): # 读取视频的参数并发送
+        fps = cap.get(cv.CAP_PROP_FPS)
+        self.s.send(str(fps).ljust(8))
+    while cap.isOpened():
+                ret, frame = cap.read() # 每次读出视频的一帧
+                if not ret:
+                    # 视频读取结束
+                    break
+                             
+                # 对当前帧做压缩编码
+                result, imgencode = cv.imencode('.jpg',frame)
+                data = numpy.array(imgencode)
+                stringData = data.tostring()
+                # 首先发送图片编码后的长度
+                self.s.send(str(len(stringData)).ljust(16).encode('utf-8'))
+                # 然后发送图片内容
+                self.s.send(stringData)
+
+            self.s.send(str(-1).ljust(16).encode('utf-8'))
+           	# over
+```
+
+
+
+在接收时，为了保证播放的流畅，设置一个缓存队列用于存储接收到的帧
+
+```python
+q = Queue.Queue()
+```
+
+并创建一个子线程用于播放视频
+
+```python
+play = threading.Thread(target=playVideo,args=(q,41))
+play.start()
+```
+
+以下是接收数据的核心代码：
+
+```python
+	while True:
+            length = self.s.recv(16)
+            
+            if isinstance(length,str) and length:
+                print(length)
+                l = int(length)
+                if l < 0:
+                    break
+                stringData = self.s.recv(l)
+                data = numpy.fromstring(stringData,dtype='uint8')
+                decimg = cv.imdecode(data,1)
+                q.put(decimg)              
+            else:                
+                break
+```
+
+
+
+
+
+##### server端
+
+server在视频传输中的任务是：
+
+1. 原视频帧的接收
+2. 将处理后的视频帧发回client端
+
+
+
+
+
+
+
+
+
+
+
+
 
 ### <center>2.3  成果展示
 
@@ -138,19 +236,16 @@
 ​       由于项目组的资金受限，无法使用并行度更高的GPU单元对目标识别算法进行加速，因而无法实现实时视频的识别与返回。项目组下一步可考虑使用英伟达显卡配合opencv摄像单元对已实现方案进行改进。
 
 <div STYLE="page-break-after: always;"></div>
-
 </br>
 
 </br>
 
 <p align="right"><font face = "Arial"><font size = 5>CHAPTER</font> <font size = 8>3</p>
-
 </br>
 
 <hr>
 
 <p align="right"><font size = 5>项目总结</p>
-
 <hr>
 </br>
 
