--- a/实验报告.md
+++ b/实验报告.md
@@ -134,6 +134,18 @@ client在视频传输中的任务是：
 1. 将视频逐帧发送
 2. 接收server端处理后发回的视频帧
 
+首先是套接字的建立
+
+```python
+try:
+	self.s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+    self.s.connect((serverip,port))
+except socket.error as msg:
+    print(msg)
+    sys.exit(1)
+print(self.s.recv(1024))
+```
+
 为了保证实时的发送和接收，任务1、2应该采用双线程处理：
 
 ```python
@@ -215,7 +227,134 @@ server在视频传输中的任务是：
 1. 原视频帧的接收
 2. 将处理后的视频帧发回client端
 
+首先是套接字的建立：
 
+```python
+try:
+   self.s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+   self.s.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEADDR, 1)
+   # 绑定端口
+   self.s.bind((ip, port))
+   # 设置监听数
+   self.s.listen(10)
+except socket.error as msg:
+   print (msg)
+   sys.exit(1)
+        
+```
+
+接着启动监听：
+
+```python
+while 1:
+	# 等待请求并接受(程序会停留在这一旦收到连接请求即开启接受数据的线程)
+    conn, addr = self.s.accept()
+    # 接收数据
+    t = threading.Thread(target=server_method, args=(conn, addr))
+    t.start()
+```
+
+同样的，接收和发送分为两个线程执行，其中接收线程将接收到的帧根据yolo进程数量均匀分配到本地目录`./frame/orig(i)`下，方便后续识别程序的执行
+
+识别程序识别`./frame/orig(i)`下的图片后，统一将其输出到`./frame/pred`下，然后由发送线程发送
+
+```python
+    while not task_kill.value:
+        im_list = os.listdir(im_dir)
+        if not yolo_running.value and not im_list:
+            print("play process end!")
+            break   
+        im_list.sort()
+        print(im_list)
+        if not im_list:
+            continue
+        im_part = im_list[:10]
+        im_tosend = [int(re.findall(r"\d+",i)[0]) for i in im_part]
+        if len(im_tosend)<10 and yolo_running.value:
+            print("wait for more to send {}".format(yolo_running.value))
+            continue
+        c = -1
+        for i in range(len(im_tosend)-1):  # 连续性检验
+            if im_tosend[i]+1 == im_tosend[i+1]:
+                pass
+            else:
+                c = i
+        if c>=0:
+            print("wait for img {}".format(im_tosend[c]))
+            continue
+        for i in im_part: # 发送
+            print("send {}".format(i))
+            im_name = os.path.join(im_dir+i)
+            img = cv.imread(im_name)
+            if img is None or img.size==0:
+                os.remove(im_name)
+                continue
+            result,imgencode = cv.imencode(".jpg",img)
+            data = numpy.array(imgencode)
+            stringData = data.tostring()
+            # 发送图片长度
+            conn.send(str(len(stringData)).ljust(16).encode())
+            # 发送图片
+            conn.send(stringData)
+            q.append(img)
+            os.remove(im_name)
+   # 结束
+   conn.send(str(-1).ljust(16).encode())
+```
+
+### 2.2.2 实现多进程识别
+
+首先实现进程任务，即对`./frame/orig(i)`下的所有图片进行识别，并将识别完成的图片输出到`./frame/pred`中，识别算法采用封装好的darknet，因此在这里只需要完成任务的调度即可
+
+```python
+	os.chdir('./yolo')
+    dir_path = "./frame/orig{}".format(id)
+    count = 0
+    while not task_kill.value:
+        os.system("ls -R ./frame/orig{}/*.jpg > ./frame/orig{}/input.txt".format(id,id))
+        im_dir = os.listdir(dir_path)
+        if len(im_dir)<=1:
+            if not running.value:
+                
+                break
+            print("empty")
+            time.sleep(0.5)
+            continue
+        count += len(im_dir) - 1
+        os.system("./darknet{} detect cfg/yolov3-tiny.cfg yolov3-tiny.weights".format(id))
+        os.system("cat ./frame/orig{}/input.txt |xargs rm -rf".format(id))
+    print("process {} finish {} images".format(id,count))     
+    return count
+```
+
+然后实现进程的创建
+
+```python
+	yolo_processes = []
+    process_num = 3
+    for i in range(process_num):
+        p = Process(target=yolo_video,args=(i,running,task_kill))
+        yolo_processes.append(p)
+        p.start()
+```
+
+
+
+
+
+> 实现多进程其实就是为了充分利用CPU资源加速识别过程，根据最终测试在识别一个223帧的360p视频的运行结果为
+>
+> | 线程数 | 运行时间(s) | CPU利用率 | 单帧平均耗时(s) |
+> | :----: | :---------: | :-------: | :-------------: |
+> |   1    |   200.12    |   约50%   |      0.90       |
+> |   2    |   171.24    |   约74%   |      0.77       |
+> |   3    |   157.53    | 恰好100%  |      0.71       |
+> |   4    |   169.23    |   100%    |      0.76       |
+> |   5    |   170.14    |   100%    |      0.76       |
+>
+> 可以看到，即使是速度最快的三进程，平均每帧也需要0.71s 远大于流畅播放的1/20 = 0.05s。
+>
+> 而更具官方给出的识别速度，如果采用1080Ti显卡，则可以达到20fps的识别速度，因此流畅播放是理论可行的
 
 
 
